deploy/canary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-demo
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: canary-demo
